test/fail/type-parameter-count-varargs.grace
type {
  name(first, *rest)
}.assert(object {
  method name(first, rest) {}
})
